--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ron Furer box model Insportration</title>
     <link rel="icon" href="Images/Ron Furer Logo.png">
-    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Custom Jersey.jpg">
+    
+
     
 </head>
 <body>
     <header  class="header">
         <div class="header-text">
-            <h1 id="h1"> Insportration</h1>
+            <h1 class= "header-text-2"> Insportration</h1>
+            <img class= "header-text-2" src="Custom Jersey.jpg" alt="">
+            <p class= "header-text-3"> This is Insportration, your number 1 hub for custom sports jerseys!</p>
 
         </div>
     </header>
