--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-text">
             <h1 class= "header-text-2"> Insportration</h1>
             <img class= "header-text-2" src="Custom Jersey.jpg" alt="">
-            <p class= "header-text-3"> This is Insportration, your number 1 hub for custom sports jerseys!</p>
+            <p id= "header-text-3"> This is Insportration, your number 1 hub for custom sports jerseys!</p>
 
         </div>
     </header>
